Add `packageManager` to package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kirimase-tutorial",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@8.15.4+sha256.cea6d0bdf2de3a0549582da3983c70c92ffc577ff4410cbf190817ddc35137c2",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
