--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.1",
     "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.7.1",
     "typescript": "^5.3.3"
