--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@node-rs/argon2": "^1.8.0",
     "@node-rs/bcrypt": "^1.10.0",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.9.2",
     "better-sqlite3": "^9.4.3",
